   - Defect 211 : Creating g1 spectrum with empty parameter list crashes with
                  SEGFLT.
   - Fix erroneous alignment mask computation in allocator.c that could lead
       to Xamine free list corruption
   - Fix error in wysiwyg printing when zoomed.
   - Fix an off by one error in scaling 1-d lineary channels.  For small scales
     and channel values the hieght of the channel was visibly lower than the 
     corresponding tick mark.
   - Enh 194    : provide more precision in output of integration.

  Released September 21, 2006

3.0-010  
	Oct. 17, 2006 BZ 219  - output the contents of VERSIOn to TCL's stdout
        Nov 09, 2006 Added CHANGELOG to installation.
        Nov 17, 2006 Fix defect 228 - Printer defaults can be whacky resulting
                     in prints killing Xamine or not working.
        Nov 17, 2006 No longer distribute setup.tcl with Skel.
        Dec 19, 2006 Fix CXdrInputStream.cpp per D. Caussyn's catch,
                    delete [] m_pBuffer not delete m_pBuffer
Released January 15, 2007

3.0-011
	Feb 12, 2007 - BZ 232 - fire traces on treevariable -set
        so that any associated GUI elements are updated.
	Feb 16, 2007 - BZ 292 - Synch gpVersion with VERSION in config.h
        Mar 01, 2007 - BZ 293 - 1. Remove NSCL Copyright from tkcon.tcl
                                   the code is Jeff Hobbs reproduced by
                                   permission, both explicit and via the
                                   code's  bourbonware license.
                                2. Further butcher tkcon.tcl so that
                                   unique tk appnames get generated/connected
                                   to ensure all SpecTcls on the same display
                                   pop up tkcons.
       Mar 09, 2007 - ensure that SpecTcl can survive a non readable
	              VERSION file.
Released April 30, 2007

3.0-012
	May  3, 2007      Really integrate jumbo buffer support into the beast.